--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
     - python setup.py sdist bdist_wheel
     - pip install dist/PyGPSClient-*.tar.gz
     - py.test
-    - pylint -E PyGPSClient
+    - pylint -E pygpsclient
 
 after_success:
     - pip install coveralls coverage
