minor updates to test cases and color tags

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ Pipfile*.*
 /htmlcov
 /build
 /dist
-/references/*.log
-/references/*.gpx
+/logs/*.log
+/logs/*.gpx
 /PyGPSClient_*
 /PyGPSClient-*
 /PyGPSClient.egg*
