--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,13 @@
 <?xml version = "1.0"?>
 <project name="PyGPSClient" default="build">
+	<property name="version" value="0.2.27" />
 	<condition property="python" value="python" else="/Library/Frameworks/Python.framework/Versions/3.9/bin/python3">
 		<os family="windows" />
 	</condition>
-	<property name="version" value="0.2.27" />
+	<condition property="make" value="docs/make.bat" else="docs/make">
+		<os family="windows" />
+	</condition>
+	<property name="sphinx" value="sphinx-apidoc" />
 	<property name="test_args" value="tests/testsuite.py" />
 	<property name="analyse_args" value="-m pylint --reports=y ${ant.project.name}" />
 	<property name="format_args" value="-m black ${ant.project.name}" />
@@ -12,12 +16,16 @@
 	<property name="install_args" value="-m pip install dist/${ant.project.name}-${version}.tar.gz --user --force-reinstall" />
 	<property name="coverage_args" value="-m coverage run --source=${ant.project.name} -m pytest" />
 	<property name="coverage_html_args" value="-m coverage html" />
+	<property name="apidoc_args" value="-f -o docs pygpsclient" />
+	<property name="apidoc_common_args" value="-f -o docs common" />
+	<property name="html_args" value="html" />
 	<target name="clean">
 		<echo>Cleaning...</echo>
 		<delete includeEmptyDirs="true" quiet="true" failonerror="false">
 			<fileset dir="build" />
 			<fileset dir="dist" />
 			<fileset dir="htmlcov" />
+			<fileset dir="doc" />
 			<fileset dir="${ant.project.name}.egg-info/" />
 			<fileset dir="${ant.project.name}-*/" />
 			<fileset dir="${ant.project.name}/__pycache__" includes="*.nbc, *.nbi, *.pyc" />
@@ -47,6 +55,18 @@
 			<arg line="${test_args}" />
 		</exec>
 	</target>
+	<target name = "sphinx">
+		<echo>Documenting...</echo>
+		<exec executable="${sphinx}">
+			<arg line="${apidoc_args}"/>
+  		</exec>
+		<exec executable="${sphinx}">
+			<arg line="${apidoc_common_args}"/>
+  		</exec>
+  		<exec executable="${make}">
+			<arg line="${html_args}"/>
+  		</exec>
+   	</target>
 	<target name = "deploy" depends="build">
 		<echo>Deploying...</echo>
 		<exec executable="${python}">
