--- a/build.xml
+++ b/build.xml
@@ -1,11 +1,23 @@
 <?xml version = "1.0"?>
 <project name="PyGPSClient" default="build">
 	<property name="version" value="1.0.5" />
-	<condition property="python" value="python" else="/Library/Frameworks/Python.framework/Versions/3.9/bin/python3">
+	<condition property="python" value="python">
 		<os family="windows" />
 	</condition>
-	<condition property="make" value="docs/make.bat" else="docs/make">
+	<condition property="python" value="/Library/Frameworks/Python.framework/Versions/3.9/bin/python3">
+		<os family="mac" />
+	</condition>
+	<condition property="python" value="python" else="/usr/bin/python3">
+		<os family="unix" />
+	</condition>
+	<condition property="make" value="docs/make.bat">
 		<os family="windows" />
+	</condition>
+	<condition property="make" value="/usr/bin/make">
+		<os family="mac" />
+	</condition>
+	<condition property="make" value="/usr/bin/make">
+		<os family="unix" />
 	</condition>
 	<property name="sphinx" value="sphinx-apidoc" />
 	<property name="test_args" value="tests/testsuite.py" />
