build script updated

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,6 @@
 <?xml version = "1.0"?>
 <project name="PyGPSClient" default="build">
+	<property name="module.name" value="pygpsclient" />
 	<property name="version" value="1.0.5" />
 	<condition property="python" value="python">
 		<os family="windows" />
@@ -21,14 +22,14 @@
 	</condition>
 	<property name="sphinx" value="sphinx-apidoc" />
 	<property name="test_args" value="tests/testsuite.py" />
-	<property name="analyse_args" value="-m pylint --reports=y ${ant.project.name}" />
-	<property name="format_args" value="-m black ${ant.project.name}" />
+	<property name="analyse_args" value="-m pylint --reports=y ${module.name}" />
+	<property name="format_args" value="-m black ${module.name}" />
 	<property name="build_args" value="setup.py sdist bdist_wheel" />
 	<property name="deploy_args" value="-m twine upload --config-file .pypirc dist/*" />
 	<property name="install_args" value="-m pip install dist/${ant.project.name}-${version}.tar.gz --user --force-reinstall" />
-	<property name="coverage_args" value="-m coverage run --source=${ant.project.name} -m pytest" />
+	<property name="coverage_args" value="-m coverage run --source=${module.name} -m pytest" />
 	<property name="coverage_html_args" value="-m coverage html" />
-	<property name="apidoc_args" value="-f -o docs pygpsclient" />
+	<property name="apidoc_args" value="-f -o docs ${module.name}" />
 	<property name="html_args" value="html" />
 	<target name="clean">
 		<echo>Cleaning...</echo>
@@ -79,7 +80,7 @@
 		<exec executable="${sphinx}">
 			<arg line="${apidoc_args}"/>
   		</exec>
-  		<exec executable="${make}">
+  		<exec executable="${make}" dir="${user.dir}/docs">
 			<arg line="${html_args}"/>
   		</exec>
    	</target>
