--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel pylint pytest pytest-cov
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      # - name: Lint with pylint
-      #   run: |
-      #     pylint -E pygpsclient
+      - name: Lint with pylint
+        run: |
+          pylint -E pygpsclient
       - name: Test with pytest
         run: |
           python tests/testsuite.py
