--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,5 @@
     "python.linting.enabled": true,
     "modulename": "pygpsclient",
     "distname": "PyGPSClient",
-    "moduleversion": "1.3.19rc0"
+    "moduleversion": "1.3.19"
 }
