--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,8 +1,8 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    // These Python 3 project tasks assume you have installed
-    // and configured: wheel, black, pylint, pytest, coverage, Sphinx, sphinx-rtd-theme
+    // These Python project tasks assume you have installed and configured: 
+    // build, wheel, black, pylint, unittest, coverage, Sphinx, sphinx-rtd-theme
     "version": "2.0.0",
     "tasks": [
         {
@@ -46,7 +46,7 @@
             "args": [
                 "-m",
                 "black",
-                "${config:modulename}"
+                "src/${config:modulename}"
             ],
             "problemMatcher": []
         },
@@ -58,7 +58,7 @@
                 "-m",
                 "pylint",
                 "-E",
-                "${config:modulename}"
+                "src/${config:modulename}"
             ],
             "problemMatcher": []
         },
@@ -70,7 +70,6 @@
                 "-m",
                 "pylint",
                 "--reports=y",
-                "--exit-zero",
                 "${config:modulename}"
             ],
             "problemMatcher": []
@@ -80,9 +79,10 @@
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
-                "${workspaceFolder}/setup.py",
-                "sdist",
-                "bdist_wheel"
+                "-m",
+                "build",
+                ".",
+                "--wheel",
             ],
             "problemMatcher": []
         },
@@ -91,36 +91,24 @@
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
-                "${workspaceFolder}/tests/testsuite.py"
+                "-m",
+                "unittest"
             ],
             "problemMatcher": []
         },
         {
             "label": "Coverage",
-            "type": "process",
+            "type": "shell",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
                 "-m",
                 "coverage",
                 "run",
-                "--source=${config:modulename}",
                 "-m",
-                "pytest"
-            ],
-            "problemMatcher": []
-        },
-        {
-            "label": "Coverage Report",
-            "type": "process",
-            "command": "${config:python.defaultInterpreterPath}",
-            "args": [
-                "-m",
+                "unittest",
+                "&&",
                 "coverage",
-                "html"
-            ],
-            "dependsOrder": "sequence",
-            "dependsOn": [
-                "Coverage"
+                "html",
             ],
             "problemMatcher": []
         },
@@ -132,7 +120,7 @@
                 "-f",
                 "-o",
                 "docs",
-                "${config:modulename}"
+                "src/${config:modulename}"
             ],
             "problemMatcher": []
         },
@@ -156,6 +144,22 @@
             "problemMatcher": []
         },
         {
+            "label": "Sphinx Deploy to S3",
+            "type": "process",
+            "command": "aws",
+            "args": [
+                "s3",
+                "cp",
+                "${workspaceFolder}/docs/_build/html",
+                "s3://www.semuconsulting.com/${config:modulename}/"
+            ],
+            "dependsOrder": "sequence",
+            "dependsOn": [
+                "Sphinx HTML"
+            ],
+            "problemMatcher": []
+        },
+        {
             "label": "Install Locally",
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
@@ -163,7 +167,7 @@
                 "-m",
                 "pip",
                 "install",
-                "${workspaceFolder}/dist/${config:distname}-${config:moduleversion}.tar.gz",
+                "${workspaceFolder}/dist/${config:distname}-${config:moduleversion}-py3-none-any.whl",
                 "--user",
                 "--force-reinstall"
             ],
@@ -171,11 +175,20 @@
             "dependsOn": [
                 "Clean",
                 "Format",
-                "Pylint",
+                "PylintError",
                 "Build",
                 "Test",
-                "Coverage Report",
+                //"Coverage",
                 "Sphinx HTML"
+            ],
+            "problemMatcher": []
+        },
+        {
+            "label": "Benchmark",
+            "type": "process",
+            "command": "${config:python.defaultInterpreterPath}",
+            "args": [
+                "${workspaceFolder}/examples/benchmark.py",
             ],
             "problemMatcher": []
         },
