--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,6 @@
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "modulename": "pygpsclient",
-    "distname": "PyGPSClient",
-    "moduleversion": "1.3.19"
+    "distname": "pygpsclient",
+    "moduleversion": "1.3.20"
 }
