update toolchain task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,12 +14,14 @@
                 "pip",
                 "install",
                 "--upgrade",
+                "setuptools",
+                "build",
+                "wheel",
                 "pylint",
                 "black",
                 "coverage",
                 "Sphinx",
                 "sphinx-rtd-theme",
-                "setuptools",
             ],
             "problemMatcher": []
         },
