--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,6 @@
 {
-    "python.testing.unittestArgs": [
-        "-v",
-        "-s",
-        "./tests",
-        "-p",
-        "test_*.py"
-    ],
-    "python.testing.pytestEnabled": false,
-    "python.testing.nosetestsEnabled": false,
-    "python.testing.unittestEnabled": true,
+    "python.testing.pytestEnabled": true,
+    "python.testing.unittestEnabled": false,
     "python.formatting.provider": "black",
     "editor.formatOnSave": true,
     // NB: for Windows, assumes symlink has been set python3<==>python
