--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,9 +73,18 @@ changelog = "https://github.com/semuconsulting/PyGPSClient/blob/master/RELEASE_N
 
 [project.optional-dependencies]
 test = [
-    "black>=23.1",
-    "pylint>=2.17",
-    "coverage>=7.2",
-    "Sphinx>=6.1.3",
-    "sphinx-rtd-theme>=1.2.0",
+    "black >= 23.1",
+    "pylint >= 2.17",
+    "pytest >= 7.2",
+    "pytest-cov >= 4.0",
+    "Sphinx >= 6.1.3",
+    "sphinx-rtd-theme >= 1.2.0",
 ]
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = "--cov --cov-report html --cov-report term-missing"
+pythonpath = ["src"]
+
+[tool.coverage.run]
+source = ["src"]
