--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,16 +15,27 @@
                 "pip",
                 "install",
                 "--upgrade",
-                "setuptools",
-                "build",
-                "wheel",
-                "pylint",
-                "pytest",
-                "pytest-cov",
-                "black",
-                "Sphinx",
-                "sphinx-rtd-theme",
+                "--upgrade",
+                "-r",
+                "${workspaceFolder}/requirements_build.txt",
             ],
+            "problemMatcher": []
+        },
+        {
+            "label": "Install Dependencies",
+            "type": "process",
+            "command": "${config:python.defaultInterpreterPath}",
+            "args": [
+                "-m",
+                "pip",
+                "install",
+                "--upgrade",
+                "-r",
+                "${workspaceFolder}/requirements.txt",
+            ],
+            "options": {
+                "cwd": "src"
+            },
             "problemMatcher": []
         },
         {
@@ -191,7 +202,8 @@
             ],
             "dependsOrder": "sequence",
             "dependsOn": [
-                //"Update Toolchain",
+                "Update Toolchain",
+                "Install Dependencies",
                 "Clean",
                 "Format",
                 "PylintError",
