--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -128,6 +128,7 @@
                 "build",
                 ".",
                 "--wheel",
+                "--sdist",
             ],
             "problemMatcher": []
         },
