--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -138,7 +138,13 @@
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
                 "-m",
-                "pytest"
+                "pytest",
+                "--cov",
+                "--cov-report=html",
+                "--cov-fail-under",
+                "5",
+                "--cov=${config:distname}",
+                "tests/",
             ],
             "problemMatcher": []
         },
