--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dependencies = [
     "requests>=2.28.0",
     "Pillow>=9.0.0",
     "pyserial>=3.5",
+    "pynmeagps>=1.0.22",
     "pyspartn>=0.1.4",
 ]
 
