--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -97,18 +97,6 @@
             "problemMatcher": []
         },
         {
-            "label": "PylintError",
-            "type": "process",
-            "command": "${config:python.defaultInterpreterPath}",
-            "args": [
-                "-m",
-                "pylint",
-                "-E",
-                "src/${config:modulename}"
-            ],
-            "problemMatcher": []
-        },
-        {
             "label": "Pylint",
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
@@ -153,6 +141,13 @@
             "type": "process",
             "command": "sphinx-apidoc",
             "args": [
+                "--doc-project=${config:modulename}",
+                "--doc-author=semuadmin",
+                "--doc-version=${config:moduleversion}",
+                "--doc-release=${config:moduleversion}",
+                "--ext-autodoc",
+                "--ext-viewcode",
+                "--templatedir=docs",
                 "-f",
                 "-o",
                 "docs",
@@ -213,7 +208,6 @@
                 "Update Toolchain",
                 "Install Dependencies",
                 "Format",
-                "PylintError",
                 "Pylint",
                 "Test",
                 "Build",
